fixed spacing on first parallax section

--- a/main.css
+++ b/main.css
@@ -7,16 +7,28 @@ body {
     color: #e0e0e0;
 }
 
-.parallax-area {
+.parallax-bg1 {
     background-attachment: fixed;
     background-image: url("img/Opasna_eta_storona.jpg");
     background-size: cover;
+    height: 100%;
 }
+
+#parallax-1 {
+    padding: 10%;
+}
+
+.parallax-2 {
+    background-color: #2f2f2f;
+    padding: 10%;
+    color: whitesmoke;
+}
+
+
 
 #bg-image-intro {
-    padding-top: 5%;
+    color: #1c1c1c;
 }
-
 
 @media screen and (max-width: 767px) {
     .parallax-area {
